Autenticacao com JWT
Autenticacao

--- a/OpenBankingApi/OpenBankingApi/appsettings.json
+++ b/OpenBankingApi/OpenBankingApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "SecurityKey": "9876543210aeiou9876543210aeiou43210",
   "ConnectionStrings": {
     "Default": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=?path?\\Infrastructure\\OPEN_BANKING.mdf;Integrated Security=True;Connect Timeout=30"
   },
