--- a/OpenBankingApi/OpenBankingApi/OpenBankingApi.csproj
+++ b/OpenBankingApi/OpenBankingApi/OpenBankingApi.csproj
@@ -26,6 +26,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\swagger-ui\custom.css" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
